--- a/sass/components/gallery.scss
+++ b/sass/components/gallery.scss
@@ -2,16 +2,15 @@
 
     .row {
         margin-left: -10px;
+        margin-right: -10px;
     }
 
     .col-4 {
-        display: inline-block;
         box-sizing: border-box;
-        padding-left: 10px;
-        padding-right: 10px;
+        display: inline-block;
+        padding: 0 10px;
+        margin: 0 -4px 16px 0;
         width: percentage(1/3);
-        margin-left: -4px;
-        margin-bottom: 16px;
         vertical-align: top;
     }
 
